tests/mypy/mypy_function_wrapper_fn_t6.out
tests/mypy/mypy_function_wrapper_fn_t6.py:15: error: Argument 1 to "function_wrapper" has incompatible type "Callable[[str, Any, tuple[Any, ...], dict[str, Any]], str]"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], str], Any, tuple[Any, ...], dict[str, Any]], str]"  [arg-type]
tests/mypy/mypy_function_wrapper_fn_t6.py:22: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_function_wrapper_fn_t6.py:22: error: Argument 1 to "__call__" of "FunctionDecorator" has incompatible type "type[function]"; expected "Callable[[VarArg(Never), KwArg(Never)], str] | Callable[[type[Never], VarArg(Never), KwArg(Never)], str] | Callable[[type[Never]], str] | Descriptor"  [arg-type]
tests/mypy/mypy_function_wrapper_fn_t6.py:22: note: Following member(s) of "function" have conflicts:
tests/mypy/mypy_function_wrapper_fn_t6.py:22: note:     Expected:
tests/mypy/mypy_function_wrapper_fn_t6.py:22: note:         def __get__(self, instance: Any, owner: type[Any] | None = ...) -> Any
tests/mypy/mypy_function_wrapper_fn_t6.py:22: note:     Got:
tests/mypy/mypy_function_wrapper_fn_t6.py:22: note:         def __get__(self, function, object, type | None = ..., /) -> Any
Found 3 errors in 1 file (checked 1 source file)
